@@ -1,5 +1,9 @@
 2011-08-10
 
+	* libsylph/html.c: minor code cleanup.
+
+2011-08-10
+
 	* libsylph/html.c: html_get_parenthesis(): fixed a bug that </style>
 	  end tags were not properly searched if whitespace was inserted in it
 	  (ex. </style > </style[\n]>).
